--- a/mysystem/css/index.css
+++ b/mysystem/css/index.css
@@ -60,8 +60,6 @@ iframe{
     display: block;
     float: left;
     color:#000;
-
-
     background-repeat: no-repeat!important;
     background-position: center!important;
     text-align: center;
@@ -78,7 +76,7 @@ iframe{
 }
 .content a:nth-child(1) {
     background: url(../icon/sk.png);
-    z-index: 1;
+    /* z-index: 1; */
 }
 .content a:nth-child(2) {
     background: url(../icon/gzh.png);
@@ -92,10 +90,14 @@ iframe{
 .content a:nth-child(5) {
     background: url(../icon/github-fill.png);
 }
-.content a:nth-child(6) {
-    background: url(../icon/dd.png);
-}
 
+.content a:nth-child(6) {
+    background: url(../icon/wjx.png);
+    background-size:30%;
+}
+/* .content a:nth-child(6) {
+    background: url(../icon/dd.png);
+} */
 .content a:hover{
     /* width: 100%;
     height: 100%; */
@@ -103,6 +105,8 @@ iframe{
     z-index: ; */
     background: rgba(255, 0, 0, 0.3);
 }
+
+
 
 /* 适配移动端 */
 @media screen and (max-width: 640px) {
@@ -121,4 +125,36 @@ iframe{
         padding-left: 20px;
      
     }
+    .content a:nth-child(2){
+       display: none;
+    }
   }
+
+
+  /* 封面 */
+  .mask{
+      background: #000;
+      opacity:0.95;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      padding-top: 10%;
+      /* line-height: 100%; */
+      color: #F1F3F4;
+      text-align: center;
+      word-wrap:break-word
+  }
+  .aphorism{
+      line-height: 30px;
+  } 
+
+
+  /* 倒计时 */
+.time-djs{
+    line-height: 30px;
+}
+#ooo{
+    color:red;
+    font-weight: bold;
+}
