--- a/mysystem/css/index.css
+++ b/mysystem/css/index.css
@@ -114,7 +114,7 @@ iframe{
 
 /* 适配移动端 */
 @media screen and (max-width: 640px) {
-    .title{display:hideen;}
+    .title{display:none;}
     .box{
         width: 99%;
         
